--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,14 @@
-name: CI
-
-on: [push]
+name: "Set Issue Label"
+on:
+  issues:
+    types: [opened]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      - uses: Naturalclar/issue-action@v1.0.0
+        with:
+          keywords: '["help", "wanted"]'
+          labels: '["help wanted"]'
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
