--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -7,13 +7,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: Naturalclar/issue-action@438734f
+      - uses: Naturalclar/issue-action@v1.0.0
         with:
           keywords: '["ec2"]'
           labels: '["ec2"]'
           assignees: '["SomayaB"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: Naturalclar/issue-action@438734f
+      - uses: Naturalclar/issue-action@v1.0.0
         with:
           keywords: '["ecr"]'
           labels: '["ecr"]'
