--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -19,37 +19,37 @@ jobs:
           labels: '["ecr"]'
           assignees: '["moniarchy"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: Naturalclar/issue-action@v1.0.0
+      - uses: SomayaB/issue-action@34adf22
         with:
           keywords: '["route53"]'
           labels: '["package/route53"]'
           assignees: '["SomayaB"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: Naturalclar/issue-action@v1.0.0
+      - uses: SomayaB/issue-action@34adf22
         with:
           keywords: '["app-delivery", "app delivery"]'
           labels: '["package/app-delivery"]'
           assignees: '["SomayaB"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: Naturalclar/issue-action@v1.0.0
+      - uses: SomayaB/issue-action@34adf22
         with:
           keywords: '["decdk"]'
           labels: '["package/decdk"]'
           assignees: '["SomayaB"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: Naturalclar/issue-action@v1.0.0
+      - uses: SomayaB/issue-action@34adf22
         with:
           keywords: '["awslint"]'
           labels: '["package/awslint"]'
           assignees: '["SomayaB"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: Naturalclar/issue-action@v1.0.0
+      - uses: SomayaB/issue-action@34adf22
         with:
           keywords: '["assert"]'
           labels: '["package/assert"]'
           assignees: '["SomayaB"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: Naturalclar/issue-action@v1.0.0
+      - uses: SomayaB/issue-action@34adf22
         with:
           keywords: '["alexa-ask","alexa ask"]'
           labels: '["@aws-cdk/alexa-ask"]'
