--- a/.github/workflows/stale-issue.yml
+++ b/.github/workflows/stale-issue.yml
@@ -1,13 +1,46 @@
 name: "Close stale issues"
-uses: aws-actions/stale-issue-cleanup@v1
-with:
-    stale-issue-message: Stale issue message
-    stale-pr-message: Stale issue message
-    stale-issue-label: closing-soon
-    exempt-issue-label: awaiting-approval
-    stale-pr-label: no-pr-activity
-    exempt-pr-label: awaiting-approval
-    response-requested-label: response-requested
-    days-before-stale: 4,
-    days-before-close: 7,
-    repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+# Controls when the action will run.
+on:
+  schedule:
+  - cron: "*/15 * * * *"
+
+jobs:
+  cleanup:
+    runs-on: ubuntu-latest
+    name: Stale issue job
+    steps:
+    - uses: aws-actions/stale-issue-cleanup@v2
+      with:
+        # Setting messages to an empty string will cause the automation to skip
+        # that category
+        ancient-issue-message: We have noticed this issue has not received attention in 3 years. We will close this issue for now. If you think this is in error, please feel free to comment and reopen the issue.
+        stale-issue-message: This issue has not received a response in 2 weeks. If you want to keep this issue open, please just leave a comment below and auto-close will be canceled.
+        stale-pr-message: This PR has not received a response in 2 weeks. If you want to keep this issue open, please just leave a comment below and auto-close will be canceled.
+        
+        # These labels are required
+        stale-issue-label: closing-soon
+        exempt-issue-label: no-autoclose
+        stale-pr-label: no-pr-activity
+        exempt-pr-label: awaiting-approval
+        response-requested-label: response-requested
+
+        # Don't set closed-for-staleness label to skip closing very old issues
+        # regardless of label
+        closed-for-staleness-label: closed-for-staleness
+
+        # Issue timing
+        days-before-stale: 14
+        days-before-close: 7
+        days-before-ancient: 1095
+
+        # If you don't want to mark a issue as being ancient based on a
+        # threshold of "upvotes", you can set this here. An "upvote" is
+        # the total number of +1, heart, hooray, and rocket reactions
+        # on an issue.
+        minimum-upvotes-to-exempt: 5
+
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        #loglevel: DEBUG
+        # Set dry-run to true to not perform label or close actions.
+        dry-run: true
