--- a/.github/workflows/stale-issue.yml
+++ b/.github/workflows/stale-issue.yml
@@ -30,7 +30,7 @@ jobs:
         closed-for-staleness-label: closed-for-staleness
 
         # Issue timing
-        days-before-stale: 1
+        days-before-stale: 0.01
         days-before-close: 2
         days-before-ancient: 1095
 
@@ -43,4 +43,4 @@ jobs:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         #loglevel: DEBUG
         # Set dry-run to true to not perform label or close actions.
-        dry-run: true
+        dry-run: false
