--- a/.github/workflows/stale-bot.yml
+++ b/.github/workflows/stale-bot.yml
@@ -1,4 +1,4 @@
-name: "Stale issues Bot"
+name: "Close Stale Issues"
 
 # Controls when the action will run.
 on:
@@ -43,3 +43,4 @@ jobs:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         #loglevel: DEBUG
         # Set dry-run to true to not perform label or close actions.
+        dry-run: false
