--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: SomayaB/auto-label@234e78
+      - uses: SomayaB/auto-label@34e78de
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           ignore-comments: true
