--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -8,52 +8,23 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    steps:
-      - uses: SomayaB/issue-action@00b6159
-        with:
+    
+    steps: 
+     - name: Checkout
+       uses: actions/checkout@v2
+       with:
+         repository: SomayaB/issue-action
+         ref: 00b6159
+         token: "${{ secrets.GITHUB_TOKEN }}"
+     - with:
           keywords: '["ec2"]'
           labels: '["ec2"]'
           assignees: '["SomayaB"]'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: SomayaB/issue-action@00b6159
-        with:
+     - with:
           keywords: '["ecr"]'
           labels: '["ecr"]'
           assignees: '["moniarchy"]'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: SomayaB/issue-action@00b6159
-        with:
-          keywords: '["route53"]'
+     - with:
+          keywords: '["route53", "route 53"]'
           labels: '["package/route53"]'
           assignees: '["SomayaB"]'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: SomayaB/issue-action@00b6159
-        with:
-          keywords: '["app-delivery", "app delivery"]'
-          labels: '["package/app-delivery"]'
-          assignees: '["SomayaB"]'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: SomayaB/issue-action@00b6159
-        with:
-          keywords: '["decdk"]'
-          labels: '["package/decdk"]'
-          assignees: '["SomayaB"]'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: SomayaB/issue-action@00b6159
-        with:
-          keywords: '["awslint"]'
-          labels: '["package/awslint"]'
-          assignees: '["SomayaB"]'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: SomayaB/issue-action@00b6159
-        with:
-          keywords: '["assert"]'
-          labels: '["package/assert"]'
-          assignees: '["SomayaB"]'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - uses: SomayaB/issue-action@00b6159
-        with:
-          keywords: '["alexa-ask","alexa ask"]'
-          labels: '["@aws-cdk/alexa-ask"]'
-          assignees: '["SomayaB"]'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"      
