--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -15,16 +15,24 @@ jobs:
        with:
          repository: SomayaB/issue-action
          ref: 00b6159
-         token: "${{ secrets.GITHUB_TOKEN }}"
      - with:
           keywords: '["ec2"]'
           labels: '["ec2"]'
           assignees: '["SomayaB"]'
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          run: |
+           node lib/index.js
      - with:
           keywords: '["ecr"]'
           labels: '["ecr"]'
           assignees: '["moniarchy"]'
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          run: |
+           node lib/index.js
      - with:
           keywords: '["route53", "route 53"]'
           labels: '["package/route53"]'
           assignees: '["SomayaB"]'
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          run: |
+           node lib/index.js
