--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -1,9 +1,9 @@
 name: "Set Issue Label and Assignee"
 on:
  issues:
-    types: [opened]
+    types: [opened, edited]
  pull_request:
-    types: [opened]
+    types: [opened, edited]
   
 jobs:
   test:
