json array update

--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -11,23 +11,7 @@ jobs:
     
     steps: 
      - with:
-          keywords: '["ec2"]'
-          labels: '["ec2"]'
-          assignees: '["SomayaB"]'
+          keywords-assignees-labels: '[ {"keywords": ["ecr"], "labels": ["ecr"], "assignees": ["SomayaB"]}, {"keywords": ["ec2"], "labels": ["ec2"], "assignees": ["SomayaB"]}]'
           title-or-body: 'title'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-       uses: SomayaB/issue-action@608d83f
-     - with:
-          keywords: '["ecr"]'
-          labels: '["ecr"]'
-          assignees: '["SomayaB"]'
-          title-or-body: 'title'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-       uses: SomayaB/issue-action@608d83f
-     - with:
-          keywords: '["route53", "route 53"]'
-          labels: '["package/route53"]'
-          assignees: '["SomayaB"]'
-          title-or-body: 'title'
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-       uses: SomayaB/issue-action@608d83f
+       uses: SomayaB/issue-action@0ac6123
