--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -14,4 +14,4 @@ jobs:
           keywords-assignees-labels: '[ {"keywords": ["ecr", "elastic container registry"], "labels": ["ecr"], "assignees": ["SomayaB", "moniarchy"]}, {"keywords": ["ec2"], "labels": ["ec2"], "assignees": ["SomayaB", "moniarchy"]}]'
           title-or-body: 'title'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-       uses: SomayaB/issue-action@1d6c0d5
+       uses: SomayaB/issue-action
