--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -14,4 +14,4 @@ jobs:
           title-or-body: 'body'
           parameters: '[ {"keywords": ["ecr", "elastic container registry"], "labels": ["ecr"], "assignees": ["SomayaB", "moniarchy"]}, {"keywords": ["ec2"], "labels": ["ec2"], "assignees": ["SomayaB", "moniarchy"]}]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-       uses: SomayaB/issue-action
+       uses: SomayaB/issue-action@66fd10e
