--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -11,6 +11,7 @@ jobs:
     
     steps: 
      - with:
+          title-or-body: title
           parameters: '[ {"keywords": ["ecr", "elastic container registry"], "labels": ["ecr"], "assignees": ["SomayaB", "moniarchy"]}, {"keywords": ["ec2"], "labels": ["ec2"], "assignees": ["SomayaB", "moniarchy"]}]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
        uses: SomayaB/issue-action@66fd10e
