--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -12,6 +12,6 @@ jobs:
     steps: 
      - with:
           title-or-body: 'title'
-          parameters: '[ {"keywords": ["ecr", "elastic container registry"], "labels": ["ecr"], "assignees": ["SomayaB"]}, {"keywords": ["ec2"], "labels": ["ec2"], "assignees": ["SomayaB"]}]'
+          parameters: '[ {"keywords": ["ecr", "elastic container registry"], "labels": ["ecr"], "assignees": ["SomayaB"]}, {"keywords": ["ec2"], "labels": ["ec2"], "assignees": ["SomayaB"]}, {"keywords": ["@aws-cdk/aws-route53-patterns", "aws-route53-patterns", "route53-patterns", "route53 patterns"], "labels": ["@aws-cdk/aws-route53-patterns"], "assignees": ["SomayaB"]}, {"keywords": ["@aws-cdk/aws-route53", "aws-route53", "route53"], "labels": ["@aws-cdk/aws-route53"], "assignees": ["SomayaB"]} ]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
        uses: SomayaB/issue-action@66fd10e
