--- a/.github/workflows/closed-issues-comment.yml
+++ b/.github/workflows/closed-issues-comment.yml
@@ -1,3 +1,4 @@
+name: "Closed Issues Default Comment"
 on:
     issues:
        types: [closed]
@@ -6,7 +7,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - uses: SomayaB/closed-issues-comment
-            with:
+          with:
             # These inputs are both required
             repo-token: "${{ secrets.GITHUB_TOKEN }}"
             closed-issues-comment: "Warning: comments on closed issues are hard for our team to see. If you need more attention, please either tag a team member or open a new issue that references this one. If you wish to keep having a conversation with other community members under this issue feel free to do so."
