--- a/.github/workflows/closed-issues-comment.yml
+++ b/.github/workflows/closed-issues-comment.yml
@@ -6,7 +6,7 @@ jobs:
     auto_comment:
         runs-on: ubuntu-latest
         steps:
-        - uses: aws-actions/closed-issue-message
+        - uses: aws-actions/closed-issue-message@main
           with:
             # These inputs are both required
             repo-token: "${{ secrets.GITHUB_TOKEN }}"
