--- a/.github/workflows/closed-issues-comment.yml
+++ b/.github/workflows/closed-issues-comment.yml
@@ -10,8 +10,8 @@ jobs:
           with:
             # These inputs are both required
             repo-token: "${{ secrets.GITHUB_TOKEN }}"
-            closed-issues-message: |
-                                    ### ⚠️COMMENT VISIBILITY WARNING⚠️ 
-                                    Comments on closed issues are hard for our team to see. If you need more assistance, please either tag a team member or open a new issue that references this one. 
-                                    If you wish to keep having a conversation with other community members under this issue feel free to do so.
-                                    
+            message: |
+                     ### ⚠️COMMENT VISIBILITY WARNING⚠️ 
+                     Comments on closed issues are hard for our team to see. 
+                     If you need more assistance, please either tag a team member or open a new issue that references this one. 
+                     If you wish to keep having a conversation with other community members under this issue feel free to do so.
