--- a/.github/workflows/closed-issue-comment.yml
+++ b/.github/workflows/closed-issue-comment.yml
@@ -10,7 +10,7 @@ jobs:
           with:
             # These inputs are both required
             repo-token: "${{ secrets.GITHUB_TOKEN }}"
-            message: |
+            test-message: |
                      ### ⚠️COMMENT VISIBILITY WARNING⚠️ 
                      Comments on closed issues are hard for our team to see. 
                      If you need more assistance, please either tag a team member or open a new issue that references this one. 
