--- a/.github/workflows/close-stale-issues.yml
+++ b/.github/workflows/close-stale-issues.yml
@@ -1,9 +1,7 @@
 name: "Close Stale Issues"
 
 # Controls when the action will run.
-on:
-    issues:
-       types: [edited]
+on: push
 
 jobs:
   cleanup:
