--- a/.github/workflows/close-stale-issues.yml
+++ b/.github/workflows/close-stale-issues.yml
@@ -40,7 +40,7 @@ jobs:
         # on an issue.
         minimum-upvotes-to-exempt: 5
 
-        repo-token: ${{ secrets.REPO_TOKEN }}
+        repo-token: ${{ secrets.PAT }}
         # loglevel: DEBUG
         # Set dry-run to true to not perform label or close actions.
         dry-run: false
