--- a/.github/workflows/issue-label-assign.yml
+++ b/.github/workflows/issue-label-assign.yml
@@ -4,6 +4,8 @@ on:
     types: [opened, edited]
  pull_request:
     types: [opened, edited]
+ pull_request_target:
+  types: [opened, edited]
   
 jobs:
   test:
